# practice_appform

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.devcontainer/: devcontainer.json
application/: Makefile  entrypoint.sh  manage.py  pyproject.toml
application/application/: asgi.py  settings.py  urls.py  wsgi.py
application/application/settings/: base.py  dev.py  local.py  stg.py
application/application/urls/: base.py  dev.py  local.py
application/common/: conf.py  constant.py  environment.py  sms.py  utils.py
application/crm/: enums.py  filters.py  injectors.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
application/crm/fixtures/: crm.json
application/crm/tests/: conftest.py  test_serializers.py  test_views.py  utils.py
application/tests/common/: test_sms.py
containers/nginx/: Dockerfile  nginx.conf
containers/nginx/conf.d/: default.conf
containers/python/: Dockerfile  entrypoint.sh
docs/: ER図.md
